--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,35 @@
-.App {
-  text-align: center;
+.App{
+    min-height: 100vh;
+    background-image: linear-gradient(120deg, #a1c4fd 0%, #c2e9fb 100%);
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.input-form{
+    min-height: 10vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.input-text{
+    width: 50%;
+    border: none;
+    padding: 10px;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.input-button{
+    background: linear-gradient(120deg, #d4fc79 0%, #96e6a1 100%);;
+    border: none;
+    padding: 10px 20px;
+    color: white;
 }
 
-.App-link {
-  color: #61dafb;
+.recipes{
+    display: flex;
+    justify-content: space-around;
+    flex-wrap: wrap;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.recipe{
+    display: flex;
+    flex-direction: column;
 }
